Fixing a bug when signing out | Adding a nav bar on smaller screens [*  < 700px]

--- a/components/Layout/MainNavigation/MainNavigation.module.css
+++ b/components/Layout/MainNavigation/MainNavigation.module.css
@@ -5,20 +5,21 @@
 	box-shadow: 1rem 0.5rem 1.5rem rgb(0 0 0 / 50%),
 		-2rem 0.5rem 2rem rgb(0 0 0 / 50%);
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
-	padding: 0.25em 0.5em;
 }
 
-.header nav,
-.header ul,
-.header li,
+.ul,
+.li,
 .logo {
-	min-height: 6rem;
 	height: 100%;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+}
+
+.li {
+	margin: auto 0.25em;
 }
 
 .header,
@@ -34,36 +35,36 @@
 	font-size: var(--size-8);
 }
 
-.header nav li {
+.li {
 	margin: 0 0.25em;
 }
 
-.header nav li a,
-.header nav li button {
+.li a,
+.li button {
 	font-weight: bold;
 	border-radius: 0.5rem;
 	transition: all ease-in-out 0.3s;
 }
 
-.header nav li a {
+.li a {
 	padding: 0.5em 0.75em;
 	border: 0.1rem solid transparent;
 }
 
-.header nav li button {
+.li button {
 	background-color: transparent;
 	padding: 0.5em 0.75em;
 	border: 0.1rem solid var(--main-special-font-color-5);
 	outline-color: var(--main-special-font-color-5);
 }
 
-.header nav li a:hover,
+.li a:hover,
 .header button:hover {
 	color: var(--main-special-bg-color-3);
 }
 
 .header button:hover,
-.header nav li a:hover {
+.li a:hover {
 	border: 0.1rem solid var(--main-special-bg-color-2);
 }
 
